--- a/memories.html
+++ b/memories.html
@@ -30,24 +30,24 @@
           <h2 data-aos="fade-left" data-aos-duration="1000">Things I Love About You</h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          Your cute fear of scary games<br>
-Your determination to achieve your goals <br>
-Your silliness and jokes<br>
-Your fake overconfidence<br>
-Your fake smugness around me<br>
-Your determination to get everything right<br>
-Your openness<br>
-Your ability to communicate<br>
-Your affection<br>
-Your possessiveness<br>
-Your diligence<br>
-Your support for your friends<br>
-Your high sexual drive<br>
-Your clinginess<br>
-Your cuteness<br>
-Your smile<br>
-Your kisses<br>
-Whenever you say babo <br>
+          <&#10084;> Your cute fear of scary games<br>
+<&#10084;>Your determination to achieve your goals <br>
+<&#10084;> Your silliness and jokes<br>
+<&#10084;> Your fake overconfidence<br>
+<&#10084;> Your fake smugness around me<br>
+<&#10084;> Your determination to get everything right<br>
+<&#10084;> Your openness<br>
+<&#10084;> Your ability to communicate<br>
+<&#10084;> Your affection<br>
+<&#10084;> Your possessiveness<br>
+<&#10084;> Your diligence<br>
+<&#10084;> Your support for your friends<br>
+<&#10084;> Your high sexual drive<br>
+<&#10084;> Your clinginess<br>
+<&#10084;> Your cuteness<br>
+<&#10084;> Your smile<br>
+<&#10084;> Your kisses<br>
+<&#10084;> Whenever you say babo <br>
         </p>
         <img
           data-aos="fade-right"
@@ -63,17 +63,17 @@ Whenever you say babo <br>
           <h2 data-aos="fade-up" data-aos-duration="1000">Memorable Events</h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          When we played Palworld when we first met <br>
-When I killed you in It Takes Two (sorry babo, im just that good!!) <br>
-When I wheezed at "UH-HUH" while playing the bomb game<br>
-When I got you into playing Minesweeper and Sudoke <br>
-When we got addicted to Candy Crush <br>
-When you introduced the "Light-Heavy Rain" and argued over it <br>
-When I yelled "SHUT UPPPP" to you<br>
-When you completed your course registration<br>
-When I help you with proofreading<br>
-"Wait Luca have a drinking problem? Oh wait, hes European"<br>
-When you got terrified at the baby starfish moving
+         <&#10084;> When we played Palworld when we first met <br>
+<&#10084;> When I killed you in It Takes Two (sorry babo, im just that good!!) <br>
+<&#10084;> When I wheezed at "UH-HUH" while playing the bomb game<br>
+<&#10084;> When I got you into playing Minesweeper and Sudoke <br>
+<&#10084;> When we got addicted to Candy Crush <br>
+<&#10084;> When you introduced the "Light-Heavy Rain" and argued over it <br>
+<&#10084;> When I yelled "SHUT UPPPP" to you<br>
+<&#10084;> When you completed your course registration<br>
+<&#10084;> When I help you with proofreading<br>
+<&#10084;> "Wait Luca have a drinking problem? Oh wait, hes European"<br>
+<&#10084;> When you got terrified at the baby starfish moving
         </p>
         <img
           data-aos="fade"
