--- a/memories.html
+++ b/memories.html
@@ -30,24 +30,24 @@
           <h2 data-aos="fade-left" data-aos-duration="1000">Things I Love About You</h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          <&#10084;> Your cute fear of scary games<br>
-<&#10084;>Your determination to achieve your goals <br>
-<&#10084;> Your silliness and jokes<br>
-<&#10084;> Your fake overconfidence<br>
-<&#10084;> Your fake smugness around me<br>
-<&#10084;> Your determination to get everything right<br>
-<&#10084;> Your openness<br>
-<&#10084;> Your ability to communicate<br>
-<&#10084;> Your affection<br>
-<&#10084;> Your possessiveness<br>
-<&#10084;> Your diligence<br>
-<&#10084;> Your support for your friends<br>
-<&#10084;> Your high sexual drive<br>
-<&#10084;> Your clinginess<br>
-<&#10084;> Your cuteness<br>
-<&#10084;> Your smile<br>
-<&#10084;> Your kisses<br>
-<&#10084;> Whenever you say babo <br>
+          <span class="heart">&#10084;</span> Your cute fear of scary games<br>
+<span class="heart">&#10084;</span> our determination to achieve your goals <br>
+<span class="heart">&#10084;</span> Your silliness and jokes<br>
+<span class="heart">&#10084;</span> Your fake overconfidence<br>
+<span class="heart">&#10084;</span> Your fake smugness around me<br>
+<span class="heart">&#10084;</span> Your determination to get everything right<br>
+<span class="heart">&#10084;</span> Your openness<br>
+<span class="heart">&#10084;</span> Your ability to communicate<br>
+<span class="heart">&#10084;</span> Your affection<br>
+<span class="heart">&#10084;</span> Your possessiveness<br>
+<span class="heart">&#10084;</span> Your diligence<br>
+<span class="heart">&#10084;</span> Your support for your friends<br>
+<span class="heart">&#10084;</span> Your high sexual drive<br>
+<span class="heart">&#10084;</span> Your clinginess<br>
+<span class="heart">&#10084;</span> Your cuteness<br>
+<span class="heart">&#10084;</span> Your smile<br>
+<span class="heart">&#10084;</span> Your kisses<br>
+<span class="heart">&#10084;</span> Whenever you say babo <br>
         </p>
         <img
           data-aos="fade-right"
@@ -63,17 +63,17 @@
           <h2 data-aos="fade-up" data-aos-duration="1000">Memorable Events</h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-         <&#10084;> When we played Palworld when we first met <br>
-<&#10084;> When I killed you in It Takes Two (sorry babo, im just that good!!) <br>
-<&#10084;> When I wheezed at "UH-HUH" while playing the bomb game<br>
-<&#10084;> When I got you into playing Minesweeper and Sudoke <br>
-<&#10084;> When we got addicted to Candy Crush <br>
-<&#10084;> When you introduced the "Light-Heavy Rain" and argued over it <br>
-<&#10084;> When I yelled "SHUT UPPPP" to you<br>
-<&#10084;> When you completed your course registration<br>
-<&#10084;> When I help you with proofreading<br>
-<&#10084;> "Wait Luca have a drinking problem? Oh wait, hes European"<br>
-<&#10084;> When you got terrified at the baby starfish moving
+         <span class="heart">&#10084;</span> When we played Palworld when we first met <br>
+<span class="heart">&#10084;</span> When I killed you in It Takes Two (sorry babo, im just that good!!) <br>
+<span class="heart">&#10084;</span> When I wheezed at "UH-HUH" while playing the bomb game<br>
+<span class="heart">&#10084;</span> When I got you into playing Minesweeper and Sudoke <br>
+<span class="heart">&#10084;</span> When we got addicted to Candy Crush <br>
+<span class="heart">&#10084;</span> When you introduced the "Light-Heavy Rain" and argued over it <br>
+<span class="heart">&#10084;</span> When I yelled "SHUT UPPPP" to you<br>
+<span class="heart">&#10084;</span> When you completed your course registration<br>
+<span class="heart">&#10084;</span> When I help you with proofreading<br>
+<span class="heart">&#10084;</span> "Wait Luca have a drinking problem? Oh wait, hes European"<br>
+<span class="heart">&#10084;</span> When you got terrified at the baby starfish moving
         </p>
         <img
           data-aos="fade"
