--- a/memories.html
+++ b/memories.html
@@ -66,7 +66,7 @@
          <span class="heart">&#10084;</span> When we played Palworld when we first met <br>
 <span class="heart">&#10084;</span> When I killed you in It Takes Two (sorry babo, im just that good!!) <br>
 <span class="heart">&#10084;</span> When I wheezed at "UH-HUH" while playing the bomb game<br>
-<span class="heart">&#10084;</span> When I got you into playing Minesweeper and Sudoke <br>
+<span class="heart">&#10084;</span> When I got you into playing Minesweeper and Sudoku <br>
 <span class="heart">&#10084;</span> When we got addicted to Candy Crush <br>
 <span class="heart">&#10084;</span> When you introduced the "Light-Heavy Rain" and argued over it <br>
 <span class="heart">&#10084;</span> When I yelled "SHUT UPPPP" to you<br>
