--- a/memories.html
+++ b/memories.html
@@ -25,6 +25,22 @@
 
     <!-- Main content container -->
     <div class="section-container">
+ <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-right" data-aos-duration="1000"><span class="heart">&#10084;</span></h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+          One of the reasons why I love you so much is the way you are! Here are my favorite things about you
+        </p>
+        <img
+          data-aos="fade-left"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="images/image3.jpg"
+          alt=""
+        />
+      </section>
+  
       <section>
         <div class="section-heading">
           <h2 data-aos="fade-left" data-aos-duration="1000">Things I Love About You</h2>
@@ -82,23 +98,6 @@
           data-aos-duration="1500"
           data-aos-delay="200"
           src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/memories.jpg?raw=true"
-          alt=""
-        />
-      </section>
-
-      <section>
-        <div class="section-heading">
-          <h2 data-aos="fade-right" data-aos-duration="1000">The Heading 3</h2>
-        </div>
-        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-          accusamus!
-        </p>
-        <img
-          data-aos="fade-left"
-          data-aos-duration="1500"
-          data-aos-delay="200"
-          src="images/image3.jpg"
           alt=""
         />
       </section>
