--- a/memories.html
+++ b/memories.html
@@ -30,7 +30,9 @@
           <h2 data-aos="fade-right" data-aos-duration="1000"><span class="heart">&#10084;</span></h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          One of the reasons why I love you so much is the way you are! Here are my favorite things about you
+          One of the reasons why I love you so much is the way you are! There are many things that make up the person "Phil Avestruz", and each of these qualities
+          is the reason why your friends and I adore you. Everytime I learn something about you, I fall in love more with you. Here are my favorite things about you and memories
+          in our relationship.
         </p>
         <img
           data-aos="fade-left"
