--- a/memories.html
+++ b/memories.html
@@ -31,14 +31,14 @@
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
           One of the reasons why I love you so much is the way you are! There are many things that make up the person "Phil Avestruz", and each of these qualities
-          is the reason why your friends and I adore you. Everytime I learn something about you, I fall in love more with you. Here are my favorite things about you and memories
+          is the reason why your friends and I adore you. Everytime I learn something about you, I fall more in love with you. Here are my favorite things about you and memories
           in our relationship.
         </p>
         <img
           data-aos="fade-left"
           data-aos-duration="1500"
           data-aos-delay="200"
-          src="images/image3.jpg"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/Timeline.jpg?raw=true"
           alt=""
         />
       </section>
