--- a/timeline.html
+++ b/timeline.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Timeline</title>
+    <link rel="stylesheet" href="timeline.css" />
+  </head>
+  <body>
+    <!-- Header with navigation bar -->
+    <header>
+      <nav>
+        <a href="home.html">Home</a>
+        <a href="letters.html">Letter</a>
+        <a href="memories.html">Memories</a>
+        <a href="timeline.html" class="active">Timeline</a>
+        <a href="">Our Home</a>
+        <a href="">Open When</a>
+      </nav>
+    </header>
+
+
 <section class="section intro">
   <div class="container">
     <h1>Horizontal Timeline v2 &rarr;</h1>
