--- a/timeline.html
+++ b/timeline.html
@@ -109,3 +109,5 @@
     <img width="24" height="24" src="https://assets.codepen.io/162656/george-martsoukos-small-logo.svg" alt="George Martsoukos logo">
   </a>
 </footer>
+
+     <script src="heartrain.js"></script>
