--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
             <a href="home.html" class="active">Home</a>
             <a href="letters.html">Letter</a>
             <a href="memories.html">Memories</a>
-            <a href="">Timeline</a>
+            <a href="timeline.html">Timeline</a>
             <a href="">Our Home</a>
             <a href="">Open When</a>
         </nav>
