--- a/letters.html
+++ b/letters.html
@@ -14,7 +14,7 @@
             <a href="home.html">Home</a>
             <a href="letters.html" class="active">Letter</a>
             <a href="memories.html">Memories</a>
-            <a href="">Timeline</a>
+            <a href="timeline.html">Timeline</a>
             <a href="">Our Home</a>
             <a href="">Open When</a>
         </nav>
