--- a/memories.html
+++ b/memories.html
@@ -17,7 +17,7 @@
         <a href="home.html">Home</a>
         <a href="letters.html">Letter</a>
         <a href="memories.html" class="active">Memories</a>
-        <a href="">Timeline</a>
+        <a href="timeline.html">Timeline</a>
         <a href="">Our Home</a>
         <a href="">Open When</a>
       </nav>
