--- a/timeline.html
+++ b/timeline.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Timeline</title>
     <link rel="stylesheet" href="timeline.css" />
+    <style>
+  body {
+    background-color: yellow;
+  }
+</style>
   </head>
   <body>
     <!-- Header with navigation bar -->
