--- a/timeline.html
+++ b/timeline.html
@@ -22,8 +22,8 @@
 
 <section class="section intro">
   <div class="container">
-    <h1>Horizontal Timeline v2 &rarr;</h1>
-    <p>Timeline v1 <a href="https://codepen.io/tutsplus/full/ZKpNwm" target="_blank">here</a></p>
+    <h1>Timeline of Our Love</h1>
+    <p>A short collection of events of our milestones</p>
   </div>
 </section>
 
