--- a/timeline.html
+++ b/timeline.html
@@ -23,18 +23,15 @@
 <section class="section intro">
   <div class="container">
     <h1>Timeline of Our Love</h1>
-    <p>A short collection of events of our milestones</p>
   </div>
 </section>
 
 <section class="timeline">
   <div class="info">
-    <img width="50" height="50" src="https://assets.codepen.io/210284/face.svg" alt="" />
-    <h2>Company History</h2>
-    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium</p>
-    <p>
-        <a href="">Learn more &gt;</a>
-    </p>
+    <img width="50" height="50" url="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/heartsmall.png?raw=true" alt="" />
+    <h2>Phil and Min's Love</h2>
+    <p>A short collection of events of our milestones</p>
+
   </div>
 
   <ol>
