--- a/memories.html
+++ b/memories.html
@@ -89,6 +89,7 @@
 <span class="heart">&#10084;</span> When you introduced the "Light-Heavy Rain" and argued over it <br>
 <span class="heart">&#10084;</span> When I yelled "SHUT UPPPP" to you<br>
 <span class="heart">&#10084;</span> When we played jigsaw puzzles together<br>
+<span class="heart">&#10084;</span> When you almost called me "baby" before we started dating<br>
 <span class="heart">&#10084;</span> Everytime I wanted you play League when we first met<br>
 <span class="heart">&#10084;</span> When you completed your course registration<br>
 <span class="heart">&#10084;</span> When I help you with proofreading<br>
