--- a/timeline.html
+++ b/timeline.html
@@ -37,7 +37,7 @@
   <ol>
     <li>
       <div>
-        <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos.
+        <time>May 17, 2024</time> We stumbled upon each other around 2:50am
       </div>
     </li>
     <li>
