--- a/memories.html
+++ b/memories.html
@@ -81,8 +81,8 @@
           <h2 data-aos="fade-up" data-aos-duration="1000">Memorable Events</h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-         <span class="heart">&#10084;</span> When we played Palworld when we first met <br>
-<span class="heart">&#10084;</span> When I killed you in It Takes Two (sorry babo, im just that good!!) <br>
+         <span class="heart">&#10084;</span> When we played Palworld and flirting <br>
+<span class="heart">&#10084;</span> When I killed you in A Way Out (sorry not sorry babo, im just that good!!) <br>
 <span class="heart">&#10084;</span> When I wheezed at "UH-HUH" while playing the bomb game<br>
 <span class="heart">&#10084;</span> When I got you into playing Minesweeper and Sudoku <br>
 <span class="heart">&#10084;</span> When we got addicted to Candy Crush <br>
@@ -90,6 +90,7 @@
 <span class="heart">&#10084;</span> When I yelled "SHUT UPPPP" to you<br>
 <span class="heart">&#10084;</span> When we played jigsaw puzzles together<br>
 <span class="heart">&#10084;</span> When you almost called me "baby" before we started dating<br>
+<span class="heart">&#10084;</span> When we acted like lovers in It Takes Two<br>
 <span class="heart">&#10084;</span> Everytime I wanted you play League when we first met<br>
 <span class="heart">&#10084;</span> When you completed your course registration<br>
 <span class="heart">&#10084;</span> When I help you with proofreading<br>
