--- a/memories.html
+++ b/memories.html
@@ -65,6 +65,8 @@
 <span class="heart">&#10084;</span> Your cuteness<br>
 <span class="heart">&#10084;</span> Your smile<br>
 <span class="heart">&#10084;</span> Your kisses<br>
+<span class="heart">&#10084;</span> You cheesing at Dune<br>
+<span class="heart">&#10084;</span> Whenever you want to read to me<br>
 <span class="heart">&#10084;</span> Whenever you say babo <br>
         </p>
         <img
@@ -91,6 +93,7 @@
 <span class="heart">&#10084;</span> When we played jigsaw puzzles together<br>
 <span class="heart">&#10084;</span> When you almost called me "baby" before we started dating<br>
 <span class="heart">&#10084;</span> When we acted like lovers in It Takes Two<br>
+<span class="heart">&#10084;</span> Everytime you read books to me<br>
 <span class="heart">&#10084;</span> Everytime I wanted you play League when we first met<br>
 <span class="heart">&#10084;</span> When you completed your course registration<br>
 <span class="heart">&#10084;</span> When I help you with proofreading<br>
