--- a/timeline.html
+++ b/timeline.html
@@ -37,64 +37,84 @@
   <ol>
     <li>
       <div>
-        <time>May 17, 2024</time> We stumbled upon each other around 2:50am
+        <time>May 17, 2024</time> Stumbled upon each other around 2:50am
       </div>
     </li>
     <li>
       <div>
-        <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+        <time>May 18, 2024</time> Played It Takes Two and called each other husband and wife for the first time
       </div>
     </li>
     <li>
       <div>
-        <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+        <time>May 21, 2024</time> First voice note sent
       </div>
     </li>
     <li>
       <div>
-        <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>May 24, 2024</time> Played Palworld for the first time and flirted with each other
       </div>
     </li>
     <li>
       <div>
-        <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>June 1, 2024</time> Watched a movie (Your Name) for the first time
       </div>
     </li>
     <li>
       <div>
-        <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>June 14, 2024</time> First MUAH
       </div>
     </li>
     <li>
       <div>
-        <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>June 30, 2024</time> Read a book (Dune) together for the first time
       </div>
     </li>
     <li>
       <div>
-        <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
+        <time>July 1, 2024</time> Became the best couple in the world
       </div>
     </li>
     <li>
       <div>
-        <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
+        <time>July 6, 2024</time> Talked about our first important and serious conversation as a couple
       </div>
     </li>
     <li>
       <div>
-        <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>July 11, 2024</time> Created Phil and Min's house
       </div>
     </li>
     <li>
       <div>
-        <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>July 12, 2024 </time> Said the first "I love you"
       </div>
     </li>
     <li>
       <div>
-        <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>July 30, 2024</time> Separated for the first time
       </div>
     </li>
+    <li>
+  <div>
+    <time>September 11, 2024</time> Your Birthday and the day you got Mini
+  </div>
+</li>
+    <li>
+  <div>
+    <time>December 10, 2024</time> Signed up for classes for the first time
+  </div>
+</li>
+    <li>
+  <div>
+    <time>December 25, 2024</time> Celebrated Christmas for the first time together
+  </div>
+</li>
+    <li>
+  <div>
+    <time>January 1, 2025</time> Celebrated New Years and wrote New Year's Resolutions for the first time together
+  </div>
+</li>
     <li></li>
   </ol>
 
