--- a/timeline.html
+++ b/timeline.html
@@ -28,7 +28,7 @@
 
 <section class="timeline">
   <div class="info">
-    <img width="50" height="50" url="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/heartsmall.png?raw=true" alt="" />
+    <img width="50" height="50" src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/heartsmall.png?raw=true" alt="" />
     <h2>Phil and Min's Love</h2>
     <p>A short collection of events of our milestones</p>
 
