--- a/room.html
+++ b/room.html
@@ -6,6 +6,16 @@
   <title>Image Mapping Example</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="letters.html" class="active">Letter</a>
+            <a href="memories.html">Memories</a>
+            <a href="timeline.html">Timeline</a>
+            <a href="">Our Home</a>
+            <a href="">Open When</a>
+        </nav>
+    </header>
 
   <!-- Image with clickable areas -->
   <img src="your-image.jpg" usemap="#image-map" alt="Image Map Example">
