--- a/room.html
+++ b/room.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Mapping Example</title>
+  <title>Our Home</title>
+  <link rel="stylesheet" href="room.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="home.html">Home</a>
-            <a href="letters.html" class="active">Letter</a>
+            <a href="letters.html">Letter</a>
             <a href="memories.html">Memories</a>
             <a href="timeline.html">Timeline</a>
-            <a href="">Our Home</a>
+            <a href="room.html" class="active">Our Home</a>
             <a href="">Open When</a>
         </nav>
     </header>
