--- a/letters.html
+++ b/letters.html
@@ -15,7 +15,7 @@
             <a href="letters.html" class="active">Letter</a>
             <a href="memories.html">Memories</a>
             <a href="timeline.html">Timeline</a>
-            <a href="">Our Home</a>
+            <a href="room.html">Our Home</a>
             <a href="">Open When</a>
         </nav>
     </header>
