--- a/memories.html
+++ b/memories.html
@@ -18,7 +18,7 @@
         <a href="letters.html">Letter</a>
         <a href="memories.html" class="active">Memories</a>
         <a href="timeline.html">Timeline</a>
-        <a href="">Our Home</a>
+        <a href="room.html">Our Home</a>
         <a href="">Open When</a>
       </nav>
     </header>
