--- a/timeline.html
+++ b/timeline.html
@@ -14,7 +14,7 @@
         <a href="letters.html">Letter</a>
         <a href="memories.html">Memories</a>
         <a href="timeline.html" class="active">Timeline</a>
-        <a href="">Our Home</a>
+        <a href="room.html">Our Home</a>
         <a href="">Open When</a>
       </nav>
     </header>
