--- a/room.html
+++ b/room.html
@@ -19,7 +19,7 @@
     </header>
 
   <!-- Image with clickable areas -->
-  <img src="your-image.jpg" usemap="#image-map" alt="Image Map Example">
+  <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/room.jpg?raw=true" usemap="#image-map" alt="Image Map Example">
 
   <!-- Define clickable areas using the <map> tag -->
   <map name="image-map">
