--- a/room.html
+++ b/room.html
@@ -23,12 +23,28 @@
 
   <!-- Define clickable areas using the <map> tag -->
   <map name="image-map">
-    <!-- Rectangular area: x1, y1, x2, y2 -->
-    <area shape="rect" coords="34,44,270,350" alt="Link 1" href="https://www.example1.com" target="_blank">
-    <!-- Circular area: x, y, radius -->
-    <area shape="circle" coords="500,200,50" alt="Link 2" href="https://www.example2.com" target="_blank">
-    <!-- Polygonal area: list of x, y points -->
-    <area shape="poly" coords="150,150,200,200,100,200" alt="Link 3" href="https://www.example3.com" target="_blank">
+    
+    <!-- Finn (Polygon area) -->
+    <area shape="poly" coords="1230,381,1165,382,1167,465,1225,463,1229,384" alt="Finn" href="https://www.example1.com" target="_blank">  
+
+    <!-- Alex (Polygon area) -->
+    <area shape="poly" coords="1287,382,1370,377,1371,487,1294,491" alt="Alex" href="https://www.example2.com" target="_blank">  
+
+    <!-- Radio (Polygon area) -->
+    <area shape="poly" coords="998,301,1058,300,1065,393,1001,393" alt="Radio" href="https://www.example3.com" target="_blank">  
+
+    <!-- Games (Polygon area) -->
+    <area shape="poly" coords="662,582,798,580,800,708,666,708" alt="Games" href="https://www.example4.com" target="_blank">  
+
+    <!-- Mini (Polygon area) -->
+    <area shape="poly" coords="426,453,533,453,535,537,420,541" alt="Mini" href="https://www.example5.com" target="_blank">  
+
+    <!-- Books (Polygon area) -->
+    <area shape="poly" coords="409,258,519,255,521,437,411,436" alt="Books" href="https://www.example6.com" target="_blank">  
+
+    <!-- Movies (Polygon area) -->
+    <area shape="poly" coords="755,351,872,350,869,446,755,441" alt="Movies" href="https://www.example7.com" target="_blank">  
+
   </map>
 
 </body>
