--- a/room.html
+++ b/room.html
@@ -25,25 +25,25 @@
   <map name="image-map">
     
     <!-- Finn (Polygon area) -->
-    <area shape="poly" coords="1230,381,1165,382,1167,465,1225,463,1229,384" alt="Finn" href="https://www.example1.com" target="_blank">  
+    <area shape="poly" coords="1230,381,1165,382,1167,465,1225,463,1229,384" alt="Finn" href="finn.html" target="_blank">  
 
     <!-- Alex (Polygon area) -->
-    <area shape="poly" coords="1287,382,1370,377,1371,487,1294,491" alt="Alex" href="https://www.example2.com" target="_blank">  
+    <area shape="poly" coords="1287,382,1370,377,1371,487,1294,491" alt="Alex" href="alex.html" target="_blank">  
 
     <!-- Radio (Polygon area) -->
-    <area shape="poly" coords="998,301,1058,300,1065,393,1001,393" alt="Radio" href="https://www.example3.com" target="_blank">  
+    <area shape="poly" coords="998,301,1058,300,1065,393,1001,393" alt="Radio" href="radio.html" target="_blank">  
 
     <!-- Games (Polygon area) -->
-    <area shape="poly" coords="662,582,798,580,800,708,666,708" alt="Games" href="https://www.example4.com" target="_blank">  
+    <area shape="poly" coords="662,582,798,580,800,708,666,708" alt="Games" href="games.html" target="_blank">  
 
     <!-- Mini (Polygon area) -->
-    <area shape="poly" coords="426,453,533,453,535,537,420,541" alt="Mini" href="https://www.example5.com" target="_blank">  
+    <area shape="poly" coords="426,453,533,453,535,537,420,541" alt="Mini" href="mini.html" target="_blank">  
 
     <!-- Books (Polygon area) -->
-    <area shape="poly" coords="409,258,519,255,521,437,411,436" alt="Books" href="https://www.example6.com" target="_blank">  
+    <area shape="poly" coords="409,258,519,255,521,437,411,436" alt="Books" href="books.html" target="_blank">  
 
     <!-- Movies (Polygon area) -->
-    <area shape="poly" coords="755,351,872,350,869,446,755,441" alt="Movies" href="https://www.example7.com" target="_blank">  
+    <area shape="poly" coords="755,351,872,350,869,446,755,441" alt="Movies" href="movies.html" target="_blank">  
 
   </map>
 
