--- a/finn.html
+++ b/finn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Title</title>
+    <title>About Finn</title>
 </head>
 <body style="font-family:Arial;">
     <center>
