--- a/finn.html
+++ b/finn.html
@@ -10,26 +10,35 @@
             <td rowspan="2">
                 <img src="Image name.file type" alt="My Photo" width="100%">
             </td>
-            <th width="500px" height="50px" bgcolor="PaleGreen">Something</th>
+            <th width="500px" height="50px" bgcolor="#ffa8be">Biography</th>
         </tr>
         <tr>
             <td>
                 <ul>
-                    <li>Name : X</li>
-                    <li>Birth Date : X</li>
-                    <li>Birth Place : X</li>
-                    <li>Hobby : X</li>
-                    <li>Religion : X</li>
+                    <li>Name : Finn</li>
+                    <li>Birth Date : September 24, 2024</li>
+                    <li>Birth Place : Georgia</li>
+                    <li>Hobby : Sleeping(inherited from his daddy)
+                        <br>Watching his sister solve the rubiks cube
+                        <br>Sleeping
+                        <br>Chewing on toys
+                        <br>Cuddling
+                        <br>Mommy and Daddy
+                        <br>Baby Scientist
+                    </li>
                 </ul>
             </td>
         </tr>
         <tr>
-            <th colspan="2" height="50px" bgcolor="PaleGreen">Something</th>
+            <th colspan="2" height="50px" bgcolor="#ffa8be">About Finn</th>
         </tr>
         <tr>
             <td colspan="2">
-                <p>Something</p>
-                <p>Something</p>
+                <p>Finn is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
+                his sleep blaming his Daddy for making him sleepy. Despite this, he loves Daddy a lot (of course he loves Mommy more). As the youngest child in the
+                family, he loves to follow his older brother and older sister Alex and Mini. He spends the most time with Alex as they always cuddle together and only
+                met his sister through video calls. Although they never met, he loves watching his sister play games when he gets the chance. He wants to be a scientist
+                when he grows up (inspired by his brother).</p>
             </td>
         </tr>
         <tr>
