--- a/finn.html
+++ b/finn.html
@@ -8,7 +8,8 @@
     <table width="700px" border="1">
         <tr>
             <td rowspan="2">
-                <img src="Image name.file type" alt="My Photo" width="100%">
+                   <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnbio.jpg?raw=true" alt="My Photo 1" width="48%" style="float:left; margin-right: 4%;">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnmin.jpg?raw=true" alt="My Photo 2" width="48%" style="float:left;">
             </td>
             <th width="500px" height="50px" bgcolor="#ffa8be">Biography</th>
         </tr>
