--- a/finn.html
+++ b/finn.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>About Finn</title>
+    <style>
+        /* Set a gradient background for the entire page */
+        body {
+            background: linear-gradient(to right, #9e1336, #ffb8ca); /* Gradient from pink to orange */
+        }
+    </style>
 </head>
 <body style="font-family:Arial;">
     <center>
