--- a/finn.html
+++ b/finn.html
@@ -5,7 +5,7 @@
     <style>
         /* Set a gradient background for the entire page */
         body {
-            background: linear-gradient(to right, #9e1336, #ffb8ca); /* Gradient from pink to orange */
+            background: linear-gradient(to right, #ffb8ca, #ffd1dd); /* Gradient from pink to orange */
         }
     </style>
 </head>
