--- a/mini.html
+++ b/mini.html
@@ -25,7 +25,7 @@
                     <li>Name : Mini (Minnie)</li>
                     <li>Birth Date : January 31, 2024</li>
                     <li>Birth Place : Georgia</li>
-                    <li>Hobby : Rubik's Cubes(inherited from her Mommy)
+                    <li>Hobbies : Rubik's Cubes (inherited from her Mommy)
                         <br>Video games
                         <br>Watching Daddy play video games
                         <br>Fake sleeping
@@ -41,7 +41,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <p>Mini is a sweet child full of mischief and energy. Most would describe her as a little ball of energy. She spent the first 7 months with her Mommy
+                <p>Mini is the second child of the Avestruz Family. She is a sweet child full of mischief and energy. Most would describe her as a little ball of energy. She spent the first 7 months with her Mommy
                 where she developed her interest in Rubik's cubes. After she went to accompany her Daddy, she gained an interest in video games. Alas, this gave her 
                 Mommy a headache because she would catch Mini neglecting her sleep to play games (due to her Daddy's encouragement). This sparks up her rebellious nature
                 that is similar to her older brother, Alex. Although she is mischievous, she adores her little brother, Finn, whom she calls and chat twice a week.</p>
