--- a/alex.html
+++ b/alex.html
@@ -40,7 +40,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <p>Alex is the first child of the Avestruz Family. Despite him being a lot older than his other two siblings, Alex was thrilled when he discovered that he is going to have younger siblings. When his Mommy
+                <p>Alex is the first child of the Avestruz Family. Despite him being a lot older than his other two siblings, he was thrilled when he discovered that he is going to have younger siblings. When his Mommy
                 first got him, he was carried everywhere with her. He got his name from her favorite character in Wizards of Waverly Place, Alex Russo. During most of his days,
                 he hangs out with his uncle and his Mommy. With his uncle, he was very rebellious and he often fake being sad to get his Mommy's sympathy (which she falls for
                 everytime). Although he is hibernating deep in sleep, he subconsciously cuddles with his younger brother, Finn, and can hear his younger sister, Mini. Fun Fact:
