--- a/finn.html
+++ b/finn.html
@@ -25,7 +25,7 @@
                     <li>Name : Finn</li>
                     <li>Birth Date : September 24, 2024</li>
                     <li>Birth Place : Georgia</li>
-                    <li>Hobby : Sleeping(inherited from his daddy)
+                    <li>Hobbies : Sleeping(inherited from his daddy)
                         <br>Watching his sister solve the rubiks cube
                         <br>Sleeping
                         <br>Chewing on toys
@@ -41,7 +41,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <p>Finn is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
+                <p>Finn is the third child of the Avestruz Family. He is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
                 his sleep blaming his Daddy for making him sleepy. Despite this, he loves Daddy a lot (of course he loves Mommy more). As the youngest child in the
                 family, he loves to follow his older brother and older sister Alex and Mini. He spends the most time with Alex as they always cuddle together and only
                 met his sister through video calls. Although they never met, he loves watching his sister play games when he gets the chance. He wants to be a scientist
