--- a/room.html
+++ b/room.html
@@ -43,7 +43,7 @@
     <area shape="poly" coords="409,258,519,255,521,437,411,436" alt="Books" href="books.html" target="_blank">  
 
     <!-- Movies (Polygon area) -->
-    <area shape="poly" coords="755,351,872,350,869,446,755,441" alt="Movies" href="movies.html" target="_blank">  
+    <area shape="poly" coords="755,351,872,350,869,446,755,441" alt="Shows" href="shows.html" target="_blank">  
 
   </map>
 
